--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ django-cors-headers==4.3.1
 django-filter==23.5
 django-allauth==0.57.0
 dj-rest-auth==5.0.2
+gunicorn==22.0.0
 psycopg2-binary==2.9.9
 python-decouple==3.8
 Pillow==10.1.0
